<resources>

    <!-- App name. -->
    <string name="app_name">Dice Roller</string>

    <!-- Action bar labels. -->
    <string name="action_roll_length">Roll Length</string>
    <string name="action_roll">Roll</string>
    <string name="action_one">One</string>
    <string name="action_two">Two</string>
    <string name="action_three">Three</string>
    <string name="action_stop">Stop</string>

    <!-- Sum label. -->
    <string name="sum_label">Sum %1$d</string>

    <!-- Snackbar messages. -->
    <string name="win_message">You won :)</string>
    <string name="lose_message">You lose :(</string>

    <!-- Roll length dialog strings. -->
    <string name="roll_length_dialog_title">Choose a roll length</string>
    <string-array name="roll_length_option_labels">
        <item>Short</item>
        <item>Medium</item>
        <item>Long</item>
    </string-array>

    <!-- Die options context menu strings. -->
    <string name="die_options_dialog_label">Choose an option for die %1$d</string>
    <string name="add_one_option_label">Add one</string>
    <string name="subtract_one_option_label">Subtract one</string>
    <string name="roll_option_label">Roll</string>

</resources>